# kubeflow-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/tools/: get_jobs.md
examples/: get_jobs_client.py
kubeflow_mcp/: __init__.py  cli.py  config.py  errors.py  schemas.py  server.py
kubeflow_mcp/adapters/: __init__.py  trainer_adapter.py
kubeflow_mcp/tools/: jobs.py
tests/: conftest.py  test_get_jobs_tool.py  test_trainer_adapter.py
tests/integration/: test_get_jobs_integration.py
